feat(domains): Add domain listing
